# sctp_basic_example

./: .gitignore  CMakeLists.txt  README.md  client_tcp.c  sctp_client.c  sctp_server.c  server_tcp.c  tcp_client.c  tcp_server.c
